k8s/apps/pocketId/pocket-id-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: default
spec:
  ports:
  - name: port-80
    port: 80
    targetPort: 80
  selector:
    app: pocket-id
